unpackaged/main/default/objects/Order/fields/Agence_PF__c.field-meta.xml
<CustomField>
    <fullName>Agence_PF__c</fullName>
    <description>Agence PF de l&#39;opportunité 
GFC-489</description>
    <formula>text( Opportunity.AgencePF__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agence PF</label>
    <type>Text</type>
</CustomField>