unpackaged/main/default/objects/Order/fields/AgencePF__c.field-meta.xml
<CustomField>
    <fullName>AgencePF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence PF</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commandes (Agence PF)</relationshipLabel>
    <relationshipName>Commande_Agence</relationshipName>
    <type>Lookup</type>
</CustomField>