unpackaged/main/default/objects/Order/fields/Annotation_ADV__c.field-meta.xml
<CustomField>
    <fullName>Annotation_ADV__c</fullName>
    <label>Annotation ADV</label>
    <type>TextArea</type>
</CustomField>