unpackaged/main/default/objects/Order/fields/Annotation_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Annotation_Facturation__c</fullName>
    <label>Annotation Facturation</label>
    <type>TextArea</type>
</CustomField>