unpackaged/main/default/objects/Order/fields/Autres_observations__c.field-meta.xml
<CustomField>
    <fullName>Autres_observations__c</fullName>
    <label>Autres observations</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>