unpackaged/main/default/objects/Order/fields/Auvent__c.field-meta.xml
<CustomField>
    <fullName>Auvent__c</fullName>
    <label>Auvent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>