unpackaged/main/default/objects/Order/fields/blng__BilledAmountwithouttax__c.field-meta.xml
<CustomField>
    <fullName>blng__BilledAmountwithouttax__c</fullName>
    <inlineHelpText>La somme de toutes les factures pour cette commande (hors taxes).</inlineHelpText>
    <label>Billed Amount (without tax)</label>
    <summarizedField>OrderItem.blng__BilledAmountwithouttax__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>