unpackaged/main/default/objects/Order/fields/blng__BillNow__c.field-meta.xml
<CustomField>
    <fullName>blng__BillNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Now</label>
    <type>Checkbox</type>
</CustomField>