unpackaged/main/default/objects/Order/fields/blng__InvoiceBatch__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceBatch__c</fullName>
    <label>Invoice Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__InvoiceBatch</valueSetName>
    </valueSet>
</CustomField>