unpackaged/main/default/objects/Order/fields/Commande_de_caution__c.field-meta.xml
<CustomField>
    <fullName>Commande_de_caution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande de caution</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Commande de caution</relationshipLabel>
    <relationshipName>Commande_de_caution</relationshipName>
    <type>Lookup</type>
</CustomField>