unpackaged/main/default/objects/Order/fields/Commande_Prolongee__c.field-meta.xml
<CustomField>
    <fullName>Commande_Prolongee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Commande prolongée</description>
    <label>Commande Prolongée</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>