unpackaged/main/default/objects/Order/fields/Compte_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Compte_de_livraison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte de livraison</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le compte sélectionné doit être de type Site</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commandes (Compte de livraison)</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>