unpackaged/main/default/objects/Order/fields/Container_Commande__c.field-meta.xml
<CustomField>
    <fullName>Container_Commande__c</fullName>
    <description>mentions the container number that was booked for this specific order</description>
    <label>Container Commandé</label>
    <length>50</length>
    <type>Text</type>
</CustomField>