unpackaged/main/default/objects/Order/fields/Contrat_valide__c.field-meta.xml
<CustomField>
    <fullName>Contrat_valide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contrat validé
GFC-444</description>
    <label>Contrat validé</label>
    <type>Checkbox</type>
</CustomField>