unpackaged/main/default/objects/Order/fields/Count_Order_products__c.field-meta.xml
<CustomField>
    <fullName>Count_Order_products__c</fullName>
    <label>Count Order products</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>