unpackaged/main/default/objects/Order/fields/Date_de_livraison_chassis__c.field-meta.xml
<CustomField>
    <fullName>Date_de_livraison_chassis__c</fullName>
    <label>Date de livraison châssis</label>
    <type>Date</type>
</CustomField>