unpackaged/main/default/objects/Order/fields/Date_de_livraison_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Date_de_livraison_vehicule__c</fullName>
    <description>GFC-444</description>
    <label>Date de livraison véhicule</label>
    <type>Date</type>
</CustomField>