unpackaged/main/default/objects/Order/fields/Date_de_retour_estimee__c.field-meta.xml
<CustomField>
    <fullName>Date_de_retour_estimee__c</fullName>
    <label>Date de retour estimée</label>
    <type>Date</type>
</CustomField>