unpackaged/main/default/objects/Order/fields/Date_MAD__c.field-meta.xml
<CustomField>
    <fullName>Date_MAD__c</fullName>
    <label>Date MAD</label>
    <type>Date</type>
</CustomField>