unpackaged/main/default/objects/Order/fields/Date_Suivi_charte_graphique__c.field-meta.xml
<CustomField>
    <fullName>Date_Suivi_charte_graphique__c</fullName>
    <label>Date Suivi charte graphique</label>
    <type>Date</type>
</CustomField>