unpackaged/main/default/objects/Order/fields/Dnp_Date_d_approbation__c.field-meta.xml
<CustomField>
    <fullName>Dnp_Date_d_approbation__c</fullName>
    <description>Dnp Date d&#39;approbation 
GFC-489</description>
    <formula>Opportunity.DNP_Date_Approbation__c</formula>
    <label>Dnp Date d&#39;approbation</label>
    <type>Date</type>
</CustomField>