unpackaged/main/default/objects/Order/fields/Dnp_Statut__c.field-meta.xml
<CustomField>
    <fullName>Dnp_Statut__c</fullName>
    <description>Dnp Statut de l&#39;opportunité
GFC-489</description>
    <formula>text( Opportunity.DNP_Statut__c )</formula>
    <label>Dnp Statut</label>
    <type>Text</type>
</CustomField>