unpackaged/main/default/objects/Order/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <label>Date de fin effective</label>
    <type>Date</type>
</CustomField>