unpackaged/main/default/objects/Order/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <label>Date de début effective</label>
    <type>Date</type>
</CustomField>