unpackaged/main/default/objects/Order/fields/Enforce_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enforce Status Change</label>
    <type>Checkbox</type>
</CustomField>