unpackaged/main/default/objects/Order/fields/Icon_commande__c.field-meta.xml
<CustomField>
    <fullName>Icon_commande__c</fullName>
    <formula>CASE( 

RecordType.Id ,  

Left($Label.Commande_OrderClient_RecordtypeId,15)  ,
 IMAGE(&#39;/resource/1649749747000/Icon_OrderClient?&#39;, &#39;Client&#39;, 64, 64) ,

LEFT($Label.Commande_OrderManual_RecordtypeId,15),
IMAGE(&#39;/resource/1649749713000/Icon_OrderManual?&#39;, &#39;Manual&#39;, 64, 64) ,


&#39;&#39;)</formula>
    <label>Icon commande</label>
    <type>Text</type>
</CustomField>