unpackaged/main/default/objects/Order/fields/IsSplitted__c.field-meta.xml
<CustomField>
    <fullName>IsSplitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSplitted?</label>
    <type>Checkbox</type>
</CustomField>