unpackaged/main/default/objects/Order/fields/Levage_specifique__c.field-meta.xml
<CustomField>
    <fullName>Levage_specifique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Levage spécifique ?</label>
    <type>Checkbox</type>
</CustomField>