unpackaged/main/default/objects/Order/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>