unpackaged/main/default/objects/Order/fields/Module_de_telesurveillance__c.field-meta.xml
<CustomField>
    <fullName>Module_de_telesurveillance__c</fullName>
    <label>Module de télésurveillance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMERSON</fullName>
            </value>
            <value>
                <fullName>GLOBETRACKER</fullName>
            </value>
            <value>
                <fullName>JRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>