unpackaged/main/default/objects/Order/fields/N_Chassis_N_Stock__c.field-meta.xml
<CustomField>
    <fullName>N_Chassis_N_Stock__c</fullName>
    <description>GFC-444</description>
    <label>N° Châssis ou N° Stock</label>
    <length>50</length>
    <type>Text</type>
</CustomField>