unpackaged/main/default/objects/Order/fields/N_client__c.field-meta.xml
<CustomField>
    <fullName>N_client__c</fullName>
    <description>GFC-497</description>
    <formula>Opportunity.N_Client__c</formula>
    <label>N° client</label>
    <type>Text</type>
</CustomField>