unpackaged/main/default/objects/Order/fields/N_IMEI__c.field-meta.xml
<CustomField>
    <fullName>N_IMEI__c</fullName>
    <label>N° IMEI</label>
    <length>25</length>
    <type>Text</type>
</CustomField>