unpackaged/main/default/objects/Order/fields/N_Parc__c.field-meta.xml
<CustomField>
    <fullName>N_Parc__c</fullName>
    <description>GFC-444</description>
    <label>N° Parc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>