unpackaged/main/default/objects/Order/fields/Observations_Clients__c.field-meta.xml
<CustomField>
    <fullName>Observations_Clients__c</fullName>
    <label>Observations Clients</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>