unpackaged/main/default/objects/Order/fields/OrderReportFileterTwo__c.field-meta.xml
<CustomField>
    <fullName>OrderReportFileterTwo__c</fullName>
    <formula>IF(AND(RecordType.Name=&#39;Manual Order&#39;,OR(ISPICKVAL(Status,&quot;Commande à facturer&quot;),ISPICKVAL(Status,&quot;Commande facturée&quot;))), 
			True,
			AND(OR(ISPICKVAL(Status,&quot;Commande à facturer&quot;),ISPICKVAL(Status,&quot;Commande facturée&quot;)),
							OR
        ( AND( MONTH( Effective_Start_Date__c ) &lt;= MONTH(TODAY()),YEAR(Effective_Start_Date__c) = YEAR (TODAY()) ),
          YEAR(Effective_Start_Date__c) &lt; YEAR (TODAY())
        )
				)			
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderReportFileterTwo</label>
    <type>Checkbox</type>
</CustomField>