unpackaged/main/default/objects/Order/fields/OrderReportFilter__c.field-meta.xml
<CustomField>
    <fullName>OrderReportFilter__c</fullName>
    <formula>OR
( AND( MONTH( StartDate__c) &lt;= MONTH(TODAY())+1,YEAR(StartDate__c) = YEAR (TODAY()) ),
YEAR(StartDate__c) &lt; YEAR (TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderReportFilter</label>
    <type>Checkbox</type>
</CustomField>