unpackaged/main/default/objects/Order/fields/Origine_du_produit__c.field-meta.xml
<CustomField>
    <fullName>Origine_du_produit__c</fullName>
    <description>Origine du produit  de l&#39;opportunité
GFC-489</description>
    <formula>text( Opportunity.TypeProduit__c )</formula>
    <label>Origine du produit</label>
    <type>Text</type>
</CustomField>