unpackaged/main/default/objects/Order/fields/Parc_Pressenti2__c.field-meta.xml
<CustomField>
    <fullName>Parc_Pressenti2__c</fullName>
    <label>Parc Pressenti SVN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>