unpackaged/main/default/objects/Order/fields/Parc_pressenti__c.field-meta.xml
<CustomField>
    <fullName>Parc_pressenti__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc pressenti</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Commandes (Parc pressenti)</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>