unpackaged/main/default/objects/Order/fields/Parc_Renouvele2__c.field-meta.xml
<CustomField>
    <fullName>Parc_Renouvele2__c</fullName>
    <label>Parc Renouvelé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>