unpackaged/main/default/objects/Order/fields/Payment_Term_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_in_Days__c</fullName>
    <description>Payment Term (in Days)</description>
    <formula>CASE(Delai_reglement__c, 
    &quot;Comptant&quot;, 8,
				&quot;15 jours&quot;, 15,
    &quot;30 jours&quot;, 30,
    &quot;45 jours&quot;, 45,
				&quot;60 jours&quot;, 60,
    30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Term (in Days)</inlineHelpText>
    <label>Payment Term (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>