unpackaged/main/default/objects/Order/fields/Pays_Region_PF__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region_PF__c</fullName>
    <description>Pays / Région PF de l&#39;opportunité
GFC-489</description>
    <formula>text( Opportunity.PaysRegionPF__c )</formula>
    <label>Pays / Région PF</label>
    <type>Text</type>
</CustomField>