unpackaged/main/default/objects/Order/fields/Periode_retour_estimee__c.field-meta.xml
<CustomField>
    <fullName>Periode_retour_estimee__c</fullName>
    <label>Période retour estimée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin (8h -12h)</fullName>
            </value>
            <value>
                <fullName>Midi (12h - 14h)</fullName>
            </value>
            <value>
                <fullName>Après-midi (14h - 18 h)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>