unpackaged/main/default/objects/Order/fields/PF_Bon_de_commande__c.field-meta.xml
<CustomField>
    <fullName>PF_Bon_de_commande__c</fullName>
    <label>Bon de commande</label>
    <type>TextArea</type>
</CustomField>