unpackaged/main/default/objects/Order/fields/PF_Location_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>PF_Location_Number_of_Days__c</fullName>
    <description>This field calculates the number of days that the container has been rent</description>
    <formula>(EndDate__c  -  StartDate__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location (Number of Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>