unpackaged/main/default/objects/Order/fields/Precisions_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Precisions_de_commande__c</fullName>
    <label>Précisions de commande</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>