unpackaged/main/default/objects/Order/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the Pro Forma Order AND the Main Order</description>
    <inlineHelpText>Ce champ fait le lien entre la commande Pro Forma ET la commande Principale</inlineHelpText>
    <label>Commande Associée</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders (Related Order)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>