unpackaged/main/default/objects/Order/fields/SBQQ__ContractingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ContractingMethod__c</fullName>
    <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
    <inlineHelpText>« Par date de fin d&#39;abonnement » crée un contrat séparé pour chaque date de fin d&#39;abonnement unique, contenant uniquement ces abonnements. « Contrat unique » crée un contrat contenant tous les abonnements, quelle que soit leur date de fin.</inlineHelpText>
    <label>Contracting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__ContractingMethod</valueSetName>
    </valueSet>
</CustomField>