unpackaged/main/default/objects/Order/fields/SBQQ__OrderBookings__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__OrderBookings__c</fullName>
    <description>Total amount of all order product bookings.</description>
    <inlineHelpText>Montant total de toutes les réservations de produit de commande.</inlineHelpText>
    <label>Order Bookings</label>
    <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>