unpackaged/main/default/objects/Order/fields/SBQQ__PaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PaymentTerm__c</fullName>
    <description>The payment term for this order.</description>
    <inlineHelpText>Les conditions de paiement de cette commande.</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>