unpackaged/main/default/objects/Order/fields/SBQQ__PriceCalcStatus__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PriceCalcStatus__c</fullName>
    <description>The order price calculation  job status.  It is set by the system.</description>
    <inlineHelpText>Indique le statut de la tâche de calcul du prix de la commande. Il est défini par le système.</inlineHelpText>
    <label>Price Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__JobStatus</valueSetName>
    </valueSet>
</CustomField>