unpackaged/main/default/objects/Order/fields/SBQQ__RenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalTerm__c</fullName>
    <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
    <inlineHelpText>Spécifiez la durée du renouvellement. Elle correspond par défaut à la durée du contrat d&#39;origine.</inlineHelpText>
    <label>Renewal Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>