unpackaged/main/default/objects/Order/fields/Site_client__c.field-meta.xml
<CustomField>
    <fullName>Site_client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GFC-444</description>
    <label>Site client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte - Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commandes (Site Client)</relationshipLabel>
    <relationshipName>Commandes_Site_Client</relationshipName>
    <type>Lookup</type>
</CustomField>