unpackaged/main/default/objects/Order/fields/Sum_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Sum_Order_Product__c</fullName>
    <description>Sum of OP without transportation</description>
    <label>Sum of Order Product</label>
    <summarizedField>OrderItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__SubscriptionPricing__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>