unpackaged/main/default/objects/Order/fields/Tech_Resa__c.field-meta.xml
<CustomField>
    <fullName>Tech_Resa__c</fullName>
    <formula>IF( AND (
				    ISPICKVAL(SBQQ__Quote__r.SBQQ__Type__c,&quot;Renewal&quot;),
        ISPICKVAL(Opportunity.TypeOpportunite__c,&quot;PRG&quot;)),False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Need Reservation ?</label>
    <type>Checkbox</type>
</CustomField>